<resources>
    <string name="app_name">Yoohoo</string>
    <string name="attach">Attach</string>
    <string name="send">send</string>
    <string name="permission_read_ext_storage_denied">Read external storage permission was denied. Please consider granting it in order to upload image!</string>
    <string name="permission_read_ext_storage_never_askagain">Read external storage permission was denied with never ask again.</string>
    <string name="permission_read_ext_storage_rationale">Read external storage permission is needed to show the select images.</string>
    <string name="permission_write_ext_storage_denied">Write external storage permission was denied. Please consider granting it in order to download files!</string>
    <string name="permission_write_ext_storage_never_askagain">Write external storage permission was denied with never ask again.</string>
    <string name="permission_write_ext_storage_rationale">Write external storage permission is needed to show the download files.</string>
    <string name="permission_read_contact_denied">Read contacts permission was denied. Please consider granting it in order to send contact information!</string>
    <string name="permission_read_contact_never_askagain">Read contacts permission was denied with never ask again.</string>
    <string name="permission_read_contact_rationale">Read contacts permission is needed to send contact information.</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="authority">com.verbosetech.Yoohoo.fileprovider</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about">About</string>
    <string name="reviews">Reviews</string>
    <string name="file_not_found">File not found!\nFile is either Moved, Deleted or Renamed.</string>
    <string name="media">Media</string>
    <string name="audio">Audio</string>
    <string name="docs">Docs</string>
    <string name="view_all">View all</string>
    <string name="phone_number">Phone number</string>
    <string name="login_message">Login via your phone number</string>
    <string name="otp_sent_message">One time password has been sent.\nVerification must complete automatically, if not, then enter the code below to continue</string>
    <string name="enter_otp">enter otp</string>
    <string name="empty_text_chat_list">Your chats appear here\nStart chatting by selecting a user.</string>
    <string name="empty_group_chat_list">Your group chats appear here\nStart chatting by selecting a group.</string>
    <string name="no_groups">You have no groups\nCreate a new group to begin with.</string>
    <string name="hint_status">Whats on your mind</string>
    <string name="hint_name">Enter your nickname</string>
    <string name="sync">Syncing contacts</string>
    <string name="invite">Invite your friends here for some YooHoo chat!</string>
    <string name="invitation_text">Hey, I found YooHoo, cool chatting application, come join me here.\nhttps://play.google.com/store/apps/details?id=%s</string>
    <string name="permission_contacts">Contacts permission is needed to access contacts</string>
    <string name="invite_friends">Invite friends…</string>
    <string name="sms_sent_unknown">Unknown Error</string>
    <string name="sms_sent_success">Message Sent Successfully</string>
    <string name="sms_sent_generic_error">Generic Failure Error</string>
    <string name="sms_sent_no_service">Error : No Service Available</string>
    <string name="sms_sent_null_pdu">Error : Null PDU</string>
    <string name="sms_sent_radio_off">Error : Radio is off</string>
    <string name="sms_sent_unable">Unable to send sms due to: %s</string>
    <string name="message_otp">We will send you a OTP message. Standard rates may apply.</string>
    <string name="your_country">Your Country</string>
    <string name="agree">I agree with Terms and Conditions</string>
    <string name="my_profile">My Profile</string>
    <string name="privacy_setting">Privacy Setting</string>
    <string name="blocked_list">Blocked List</string>
    <string name="terms_and_privacy">Terms and Privacy</string>
    <string name="nearby">Nearby</string>
</resources>